--- a/Search.css
+++ b/Search.css
@@ -40,12 +40,13 @@ body{
 
 .search-txt{
     font-family: sans-serif;
+    font-weight: bold;
     border: none;
     background: none;
     outline: none;
     float: left;
-    padding: 0;
-    color: white;
+    padding: 10;
+    color: black;
     font-size: 16px;
     transition: 0.4s;
     line-height: 40px;
